Reduce based on BitSet + track List of Solutions for each DUC